--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
           height: 100%;
         }
     </style>
-    <div id="root"></div>
+    <div id="root" style="width: 100%"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
